# oracleai

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py  credit_scoring_demo.py
src/: __main__.py  core.py  health.py  utils.py
src/oracleai/: __init__.py  cli.py  models.py  report.py
src/oracleai/correction/: __init__.py  causal.py  counterfactual.py  self_aware.py
src/oracleai/detection/: __init__.py  feedback_analyzer.py  loop_detector.py  metrics.py
src/oracleai/simulation/: __init__.py  credit.py  policing.py  recommendation.py
tests/: test_benchmark.py  test_core.py  test_correction.py  test_detection.py  test_integration.py
